Fixed a bug where the header covers the whole page making clicks not working and revamped the code for the project layouts

--- a/website/css/meta.css
+++ b/website/css/meta.css
@@ -66,7 +66,7 @@ a,a:hover,a:visited,a:link,a:active {
 .header {
     transition: top 0.3s;
     top: 0;
-    height: 100%;
+    height: 10vh;
     width: 100%;
     position: fixed;
     z-index: 1000;
