--- a/website/css/projects.css
+++ b/website/css/projects.css
@@ -53,8 +53,20 @@
     box-sizing:border-box;
 }
 
+.link.img {
+  position:relative;
+  width:100%;
+  height:100%;
+  display: inline-block;
+}
+
 .link.img:hover .overlayB {
   opacity: 1;
+  transform: scale(1.1) translateY(1vh);
+}
+
+.link.img:hover .img {
+  transform: scale(1.1);
 }
 
 .link .img {
@@ -62,27 +74,22 @@
     width:100%;
     height: 100%;
     border-radius: 10px;
-    border: 1px solid #ffffff47;
+    transition: all .2s ease-in-out;
 }
 
 .overlayB {
-    position:absolute;
-    bottom:-1px;
-    left:1px;
-    height: 5vh;
-    width: 100%;
-    border-radius: 7px;
-    background: rgba(0,0,0,0.7);
-    color:white;
-    text-align: center;
-    box-sizing: border-box;
-    vertical-align: middle;
-    padding: 0;
-    opacity:0;
-    transition: .5s ease;
-}
-
-.overlayB p {
-    position: relative;
-    bottom:35%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20%;
+  background: rgba(0,0,0,0.5);
+  transition: .5s ease;
+  text-align: center;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  align-items: center;
+  font-size: 1vw;
 }
